--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;700&display=swap" rel="stylesheet"> 
 
 <!-- Nosso CSS-->
-    <link rel="stylesheet" href="/assets/css/global.css">
-    <link rel="stylesheet" href="/assets/css/pokedex.css">
+    <link rel="stylesheet" href="./assets/css/global.css">
+    <link rel="stylesheet" href="./assets/css/pokedex.css">
 
 </head>
 <body>
@@ -26,16 +26,24 @@
 
         <ol id="pokemonList" class="pokemons"></ol>
             <div class="pagination">
-                <button id="loadMore" type="button">MORE</button>
+                <button id="loadMore" type="button">+</button>
             </div>
+            
+        <div id="myModal" class="modal">
 
-        
+
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <p class="paragraph"></p>
+        </div>
+  
+        </div>
     </section>
 
 
 
-    <script src="/assets/js/pokemon-model.js"></script>
-    <script src="/assets/js/poke-api.js"></script>
-    <script src="/assets/js/main.js">htt</script>
+    <script src="./assets/js/pokemon-model.js"></script>
+    <script src="./assets/js/poke-api.js"></script>
+    <script src="./assets/js/main.js">htt</script>
 </body>
 </html>
